--- a/st-treeoflife/styles.css
+++ b/st-treeoflife/styles.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Trebuchet MS', sans-serif;
-    touch-action: manipulation;
 }
 
 body {
@@ -30,7 +29,7 @@ form {
     letter-spacing: 1.5px;
     font-size: 28px;
     font-weight: bold;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 #inputField:focus {
@@ -45,7 +44,7 @@ form {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5vh;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .keypad button {
@@ -64,19 +63,31 @@ form {
 .submit-button {
     width: 255px;
     padding: 15px;
+    margin: 12px 0;
     border: none;
     border-radius: 25px;
-    background-color: #f5a623;
     color: white;
-    font-size:  20px;
+    font-size:  18px;
     font-weight: bold;
-    letter-spacing: 4.3px;
+    letter-spacing: 1px;
+    cursor: pointer;
 
     opacity: 1;
     transition: 0.3s ease-out;
+
 }
 
-#submitButton:disabled {
+#loginButton {
+    background-color: #f5a623;
+}
+
+#logoutButton {
+    background-color: #588ef9;
+}
+
+.submit-button:disabled {
+    padding: 0px;
+    font-size: 0px;
     opacity: 0;
     transition: 0.3s ease-in-out;
     transform: translate(0px, 10px);
