--- a/xmas-card-2024/xmas-card.css
+++ b/xmas-card-2024/xmas-card.css
@@ -442,7 +442,7 @@ cart summary
 
   text-align: center;
   cursor: pointer;
-
+  font-size: 16px;
   padding: 12px 22px;
   width: 100%;
   border-radius: 5px;
