--- a/xmas-card-2024/xmas-card.css
+++ b/xmas-card-2024/xmas-card.css
@@ -1,6 +1,3 @@
-/* shadow 
--- https://getcssscan.com/css-box-shadow-examples */
-
 :root {
   --default-font: "Inconsolata", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Inconsolata", sans-serif;
@@ -44,6 +41,10 @@ body {
   overflow-x: hidden;
 }
 
+p {
+  line-height: 1.5;
+}
+
 .material-symbols-rounded {
   align-items: center;
   fill: #000;
@@ -59,10 +60,6 @@ body {
 
 .hero {
   text-align: center;
-}
-
-.shadow-sm {
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 .shadow-card {
@@ -345,17 +342,17 @@ cart summary
   padding: 10px 10px;
   border: 1px solid lightgrey;
   border-radius: 5px;
-  font-size: 80%;
+  /* font-size: 80%; */
 }
 
 .radio-group {
   display: flex;
   flex-direction: column;
-  font-size: 80%;
+  /* font-size: 80%; */
 }
 
 .radio-label {
-  font-size: 80%;
+  /* font-size: 80%; */
   padding-top: 10px;
 }
 
@@ -422,7 +419,7 @@ cart summary
   border-radius: 5px;
 }
 
-#cart .paycode {
+.paycode {
   width: 100%;
   max-width: 300px;
 }
@@ -638,12 +635,6 @@ submission page
 
 */
 
-.submission .reminder {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
 .submission .button-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -672,7 +663,7 @@ submission page
 
 .download {
   margin: 30px 0;
-  padding: 20px;
+  padding: 30px;
   display: flex;
   flex-direction: column;
   gap: 10px;
