--- a/xmas-card-2024/xmas-card.css
+++ b/xmas-card-2024/xmas-card.css
@@ -1,3 +1,6 @@
+/* shadow 
+-- https://getcssscan.com/css-box-shadow-examples */
+
 :root {
   --default-font: "Inconsolata", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Inconsolata", sans-serif;
