--- a/xmas-card-2024/xmas-card.css
+++ b/xmas-card-2024/xmas-card.css
@@ -582,6 +582,14 @@ Album :hover
   opacity: 1;
 }
 
+/* footer */
+
+.copyright {
+  font-size: 12px;
+  text-align: center;
+  padding: 30px;
+}
+
 
 /*
 
