--- a/xmas-card-2024/xmas-card.css
+++ b/xmas-card-2024/xmas-card.css
@@ -23,8 +23,22 @@
 
 /* sizes */
 :root {
-  --icons-size: 22px;
+  --page-margin: 30px; /* header, page main container */
+
+  --font-size-m: 15px; /* universal * */
+  --font-size-s: 12px; /* design caption, filter buttons, copyright */
+  --button-gap: 15px; /* main header, cart item buttons */
+
 }
+
+@media only screen and (max-width: 500px) {
+  :root {
+    --page-margin: 24px;
+    --button-gap: 10px;
+  }
+}
+
+
 
 * {
   margin: 0;
@@ -36,6 +50,8 @@
   color: var(--text-color);
 
   font-family: var(--default-font);
+  font-size: var(--font-size-m);
+  line-height: 1.5;
 }
 
 body {
@@ -43,13 +59,10 @@ body {
   overflow-x: hidden;
 }
 
-p {
-  line-height: 1.5;
-}
-
 .material-symbols-rounded {
   align-items: center;
   fill: #000;
+  font-size: 20px;
 
   cursor: pointer;
   
@@ -81,7 +94,7 @@ p {
   position: sticky;
   top: 0;
   left: 0;
-  padding: 20px 30px;
+  padding: 20px var(--page-margin);
 
   display: flex;
   justify-content: space-between;
@@ -106,7 +119,7 @@ p {
   gap: 4px;
 }
 
-.header .content .title {
+.header .title {
   font-size: 18px;
 }
 
@@ -115,18 +128,7 @@ p {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 16px;
-}
-
-.nav .filter-toggle {
-  display: flex;
-  align-items: center;
-  border: none;
-  background-color: transparent;
-  color: var(--main-bg-color);
-  gap: 10px;
-  font-size: 16px;
-  cursor: pointer;
+  gap: var(--button-gap);
 }
 
 /*
@@ -148,7 +150,7 @@ p {
   transition: 0.3s ease;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   #filter {
     gap: 5px;
   }
@@ -161,7 +163,7 @@ p {
   color: var(--main-bg-color);
   border-radius: 5px;
 
-  font-size: 12px;
+  font-size: var(--font-size-s);
   text-align: center;
   letter-spacing: 0.7px;
 
@@ -199,7 +201,6 @@ p {
 
   z-index: 200;
   transition: all 0.5s ease;
-
 }
 
 .subpage:target {
@@ -212,12 +213,12 @@ p {
 
 .subpage .header {
   width: 100%;
-  padding: 20px 30px;
+  padding: 20px var(--page-margin);
 }
 
 .subpage .container {
   width: 100%;
-  padding: 20px 30px 40px 30px;
+  padding: 20px var(--page-margin) 40px var(--page-margin);
 }
 
 .divider {
@@ -240,11 +241,6 @@ p {
 
   background-color: var(--secondary-color);
   color: var(--secondary-text-color);
-}
-
-#payment p {
-  font-size: 16px;
-  line-height: 1.5;
 }
 
 #payment .divider {
@@ -303,12 +299,7 @@ p {
 
 .cart-item .buttons {
   display: flex;
-  gap: 20px;
-  margin-right: 20px;
-}
-
-.cart-item i {
-  font-size: var(--icons-size);
+  gap: var(--button-gap);
 }
 
 
@@ -321,13 +312,13 @@ cart summary
 #cart #summary {
   margin: 30px 0;
 
-  padding: 30px;
+  padding: var(--page-margin);
   border-radius: 10px;
   border: 1px solid lightgrey;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
-#summary .subtitle {
+#summary .subheading {
   font-weight: 600;
   padding-bottom: 15px;
 }
@@ -438,7 +429,7 @@ cart summary
 
   text-align: center;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   padding: 12px 22px;
   width: 100%;
   border-radius: 5px;
@@ -457,7 +448,7 @@ cart summary
 #album {
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 30px;
+  margin: 20px var(--page-margin);
   gap: 27px;
   justify-content: center;
 }
@@ -472,7 +463,7 @@ cart summary
   position: relative;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .album-item {
     max-width: 100%;  
   }
@@ -533,7 +524,7 @@ cart summary
 }
 
 .album-item .caption {
-  font-size: 12px;
+  font-size: var(--font-size-s);
   font-weight: 400;
   padding-top: 5px;
   padding-right: 0px;
@@ -585,9 +576,9 @@ Album :hover
 /* footer */
 
 .copyright {
-  font-size: 12px;
+  font-size: var(--font-size-s);
   text-align: center;
-  padding: 30px;
+  padding: var(--page-margin);
 }
 
 
@@ -643,7 +634,8 @@ submission page
 */
 
 .submission {
-  margin: 30px 30px 50px 30px;
+  margin: var(--page-margin);
+  margin-bottom: 50px;
 }
 
 .submission .button-grid {
@@ -658,7 +650,7 @@ submission page
 
   text-align: center;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 15px;
   padding: 12px 22px;
   width: 100%;
   border-radius: 5px;
@@ -673,8 +665,8 @@ submission page
 
 
 .download {
-  margin: 30px 0;
-  padding: 30px;
+  margin: var(--page-margin) 0;
+  padding: var(--page-margin);
   display: flex;
   flex-direction: column;
   gap: 10px;
